--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@xmldom/xmldom": "^0.8.5",
     "escape-html": "^1.0.3",
+    "node-forge": "^1.3.1",
     "xpath": "0.0.32"
   },
   "files": [
